hphp/test/zend/bad/ext-standard-strings/bug47443.php
<?php

var_dump(metaphone("scratch"));
var_dump(metaphone("scrath"));
var_dump(metaphone("scratc"));

?>